# argo-rs

./: Cargo.toml  README.md  install.sh  uninstall.sh
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: book.toml  index.html
docs/assets/: style.css
docs/book/: 404.html  landing.html  print.html  searcher-c2a407aa.js  searchindex-91a3ed0e.js  toc-84095426.js  toc.html
docs/book/cli/: authentication.html  branches.html  commits.html  configuration.html  index.html  pull-requests.html
docs/book/configuration/: ai-setup.html  credentials.html  index.html  paths.html
docs/book/development/: index.html
docs/book/installation/: from-source.html  index.html  quick-install.html  uninstalling.html  updating.html
docs/book/tui/: index.html  navigation.html
docs/documentation/: book.toml
docs/documentation/book/: 404.html  index.html  print.html  searcher-c2a407aa.js  searchindex-33761348.js  toc-d11290c6.js  toc.html
docs/documentation/src/: SUMMARY.md
docs/src/: SUMMARY.md  landing.md
docs/src/cli/: README.md  authentication.md  branches.md  pull-requests.md
docs/src/configuration/: README.md  credentials.md  paths.md
docs/src/development/: README.md
docs/src/installation/: README.md  from-source.md  quick-install.md  updating.md
docs/src/tui/: navigation.md
docs/theme/css/: custom.css
src/: error.rs  lib.rs  main.rs
src/ai/: gemini.rs  mod.rs  prompts.rs
src/cli/: auth.rs  branch.rs  commands.rs  commit.rs  config.rs  mod.rs  pr.rs  push.rs  tag.rs  update.rs  workflow.rs
src/core/: config.rs  credentials.rs  git.rs  mod.rs  repository.rs  token_manager.rs  update.rs  update_checker.rs
src/github/: auth.rs  branch.rs  client.rs  error_handler.rs  mod.rs  polling.rs  pull_request.rs  tag.rs  workflow.rs
src/tui/: app.rs  event.rs  mod.rs  theme.rs  ui.rs
src/tui/screens/: auth.rs  mod.rs  tags.rs
src/tui/widgets/: input_field.rs  (+1 more)
(+24 files in other folders)
