[package]
name = "argo_rs"
version = "0.1.6"
edition = "2021"
authors = ["Stefano De Cillis"]
description = "A TUI application for managing GitHub repositories"
license = "MIT"
repository = "https://github.com/stefanodecillis/argo-rs"
readme = "README.md"
keywords = ["github", "tui", "git", "cli", "pull-request"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "argo"
path = "src/main.rs"

[dependencies]
# CLI parsing
clap = { version = "4.5", features = ["derive", "env"] }

# TUI
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# Async runtime
tokio = { version = "1.40", features = ["full", "sync"] }
futures = "0.3"

# GitHub API
octocrab = "0.41"
secrecy = "0.10"

# Secure credential storage (requires native features for actual storage)
keyring = { version = "3", features = ["apple-native", "sync-secret-service"] }

# HTTP client (for OAuth device flow and Gemini API)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Pattern matching for error classification
regex = "1"
once_cell = "1"

# Git operations
git2 = "0.19"

# Configuration directories
directories = "5.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# URL parsing
url = "2.5"

# Auto-update functionality
semver = "1.0"
sha2 = "0.10"
tempfile = "3.14"
flate2 = "1.0"
tar = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
mockall = "0.13"
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
